/**
 * Represents an exception that is thrown when a duplicate key occurs in an identity cache.
 */
export class DuplicateKeyException extends RangeError
{
}
