/**
 * Represents an exception that is thrown when the key specified for accessing an element in a collection does not match any key in the collection.
 */
export class KeyNotFoundException extends RangeError
{
}
